fixing css wrapping issues. applying fix in #356.

--- a/modules/base/css/owa.report.css
+++ b/modules/base/css/owa.report.css
@@ -198,6 +198,7 @@ p.owa_metricInfoboxLargeNumber, span.owa_metricInfoboxLargeNumber {
 	margin-top:5px;
 	font-weight: bold;
 	line-height: normal;
+	white-space:nowrap;
 }
 
 .owa_infobox {width:auto; padding:10px; border:1px solid #efefef; border-left:5px solid orange;}
